# SoDoC

./: SoDoCay.sln  SoDoCay.vcxproj  baocao.docx  sample_input.txt
SoDoCay/x64/Debug/: SoDoCay.exe.recipe  vc143.idb
SoDoCay/x64/Debug/SoDoCay.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SoDoCay.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  Tree.cpp  Tree.h  UI.cpp  UI.h  main.cpp
